--- a/css/style.scss
+++ b/css/style.scss
@@ -5145,6 +5145,13 @@ input[type="radio"].visually-hidden {
 
 // слайдер c отзывами
 
+.more-slider__wrapper {
+      margin-bottom: 40px;
+      min-height: 280px;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+}
 
 .more-slider__container {
       padding: 0;
@@ -5195,12 +5202,50 @@ input[type="radio"].visually-hidden {
 }
 
 .more-slider__slider2 {
+      width: 683px;
+      box-sizing: border-box;
+      padding: 30px;
+      background-color: #f8f8fb;
+}
+
+.more-slider__slider2-text {
+      padding: 0;
+      margin-bottom: 30px;
+      font-size: 17px;
+      line-height: 25px;
+
+}
+
+.more-slider__slider2-autor {
+      display: flex;
+      align-items: center;
+}
+
+.more-slider__slider2-autor-name {
+      padding: 0;
+      margin-right: auto;
+      font-size: 20px;
+      line-height: 30px;
+      color: $color-black1;
+}
+
+.more-slider__slider2-autor-img {
+      width: 50px;
+      height: 50px;
+      margin-right: 15px;
+      border-radius: 50%;
+}
+
+
+.more-slider__slider2,
+.more-slider__slider1 {
       display: none;
 }
 
-.more-slider__wrapper {
-      margin-bottom: 40px;
+.more-slider__slider--active {
+      display: block;
 }
+
 
 .more-slider__button-wrapper {
       width: 120px;
@@ -5218,6 +5263,7 @@ input[type="radio"].visually-hidden {
       opacity: 0.5;
       transition: all .1s ease-in-out;
       background: url(../img/chevron_left.svg) top 50% left 50% no-repeat;
+      outline: none;
 
 }
 
@@ -5236,6 +5282,7 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       transition: all .1s ease-in-out;
       background: url(../img/chevron_right.svg) top 50% left 50% no-repeat;
+      outline: none;
 }
 
 .more-slider__button-forward:hover,
@@ -5262,6 +5309,7 @@ input[type="radio"].visually-hidden {
 }
 
 .more-photo__slider {
+      display: none;
       position: absolute;
       left: 0;
       top: 0;
@@ -5289,6 +5337,7 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       background: $color-white1 url(../img/chevron_right.svg) top 50% left 50% no-repeat;
       z-index: 3;
+      outline: none;
 }
 
 .more-photo__button-forward:hover,
@@ -5308,6 +5357,7 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       background: $color-white1 url(../img/chevron_left.svg) top 50% left 50% no-repeat;
       z-index: 3;
+      outline: none;
 
 }
 
@@ -5317,6 +5367,9 @@ input[type="radio"].visually-hidden {
       transform: translate(0, -2px);
 }
 
+.more-photo__slider--active {
+      display: block;
+}
 
 
 
