--- a/css/style.scss
+++ b/css/style.scss
@@ -127,6 +127,7 @@ input[type="radio"].visually-hidden {
 }
 
 .header__navigation-logo {
+      display: block;
       position: fixed;
       box-sizing: border-box;
       z-index: 1;
@@ -136,6 +137,8 @@ input[type="radio"].visually-hidden {
 }
 
 .header__navigation-menu {
+      width: 100%;
+      box-sizing: border-box;
       padding: 120px 30px 30px;
       margin: 0;
       display: flex;
@@ -147,6 +150,7 @@ input[type="radio"].visually-hidden {
       font-size: 20px;
       line-height: 30px;
       color: $color-black1;
+      outline: none;
 }
 
 .header__navigation-menu-item:hover {
@@ -177,6 +181,7 @@ input[type="radio"].visually-hidden {
       line-height: 25px;
       margin-bottom: 5px;
       color: $color-gray1;
+      outline: none;
 }
 
 .header__navigation-item:hover,
@@ -5412,9 +5417,11 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       color: $color-black1;
       cursor: pointer;
+      outline: none;
 }
 
-.more-tariff__free:hover {
+.more-tariff__free:hover,
+.more-tariff__free:focus {
       box-shadow: 0 15px 30px 0 $color-gray3;
       transform: translate(0, -5px);
 }
@@ -5543,9 +5550,11 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       color: $color-black1;
       cursor: pointer;
+      outline: none;
 }
 
-.more-tariff__premium:hover {
+.more-tariff__premium:hover,
+.more-tariff__premium:focus {
       box-shadow: 0 15px 30px 0 $color-gray3;
       transform: translate(0, -5px);
 }
@@ -5674,9 +5683,11 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       color: $color-black1;
       cursor: pointer;
+      outline: none;
 }
 
-.more-tariff__unlimited:hover {
+.more-tariff__unlimited:hover,
+.more-tariff__unlimited:focus {
       box-shadow: 0 15px 30px 0 $color-gray3;
       transform: translate(0, -5px);
 }
@@ -6678,9 +6689,11 @@ input[type="radio"].visually-hidden {
       transition: all .1s ease-in-out;
       color: $color-black1;
       cursor: pointer;
+      outline: none;
 }
 
-.components__cart1:hover {
+.components__cart1:hover,
+.components__cart1:focus {
       box-shadow: 0 -15px 35px 0 $color-gray3;
       transform: translate(0, -5px);
 }
