--- a/css/style.scss
+++ b/css/style.scss
@@ -3456,6 +3456,9 @@ input[type="radio"].visually-hidden {
 }
 
 // checkbox
+#addition-checkbox__option-input1:focus~.addition-checkbox__input-label::before {
+      outline: rgb(59, 153, 252) auto 5px;
+}
 
 .form-elements__addition-style-checkbox {
       box-sizing: border-box;
@@ -3503,6 +3506,11 @@ input[type="radio"].visually-hidden {
 
 
 // radio
+
+#addition-radio__option-input1:focus~.addition-radio__input-label::before,
+#addition-radio__option-input2:focus~.addition-radio__input-label::before {
+      outline: rgb(59, 153, 252) auto 5px;
+}
 
 .form-elements__addition-style-radio {
       box-sizing: border-box;
@@ -3602,6 +3610,11 @@ input[type="radio"].visually-hidden {
       box-sizing: border-box;
       display: flex;
       justify-content: space-between;
+}
+
+.tumbler-small__grey-input:focus~.tumbler-small__grey,
+.tumbler-small__white-input:focus~.tumbler-small__white {
+      outline: rgb(59, 153, 252) auto 5px;
 }
 
 // серый
@@ -3716,6 +3729,11 @@ input[type="radio"].visually-hidden {
       box-sizing: border-box;
       display: flex;
       justify-content: space-between;
+}
+
+.tumbler-big__grey-input:focus~.tumbler-big__grey,
+.tumbler-big__white-input:focus~.tumbler-big__white {
+      outline: rgb(59, 153, 252) auto 5px;
 }
 
 // серый
@@ -5077,6 +5095,7 @@ input[type="radio"].visually-hidden {
       border: 2px dashed $color-gray3;
       border-radius: 8px;
       background-color: $color-gray4;
+      z-index: 1000;
 }
 
 .more-file__form-text {
@@ -5097,12 +5116,15 @@ input[type="radio"].visually-hidden {
       border-radius: 25px;
       background-color: $color-blue1;
       cursor: pointer;
-      outline: none;
+      z-index: 1000;
 }
 
-.more-file__form-button:hover,
+.more-file__form-button:hover {
+      background-color: $color-blue3;
+}
 .more-file__form-button:focus {
-      background-color: $color-blue3
+      background-color: $color-blue3;
+      outline: rgb(59, 153, 252) auto 5px;
 }
 
 .more-file__form-submit {
@@ -5114,14 +5136,13 @@ input[type="radio"].visually-hidden {
       font-size: 14px;
       border-radius: 25px;
       border: none;
-      outline: none;
       background-color: $color-blue1;
       cursor: pointer;
 }
 
 .more-file__form-submit:hover,
 .more-file__form-submit:focus {
-      background-color: $color-blue3
+      background-color: $color-blue3;
 }
 
 .more-file__form-input-wrapper {
@@ -5130,7 +5151,6 @@ input[type="radio"].visually-hidden {
       height: 100%;
       cursor: pointer;
 }
-
 #more-file__form-input {
       display: none;
 }
